--- a/index.html
+++ b/index.html
@@ -1,13 +1,78 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le site du Chef</title>
     <link rel="stylesheet" href="./public/css/app.css">
 </head>
-<body>
 
+<body>
+    <!-- header  -->
+    <header>
+        <!-- carousel -->
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner" role="listbox">
+                <!-- Slide One - Set the background image for this slide in the line below -->
+                <div class="carousel-item active" style="background-image: url('./public/img/banner1.jpg')">
+                </div>
+                <!-- Slide Two - Set the background image for this slide in the line below -->
+                <div class="carousel-item" style="background-image: url('./public/img/banner1.jpg')">
+                </div>
+                <!-- Slide Three - Set the background image for this slide in the line below -->
+                <div class="carousel-item" style="background-image: url('./public/img/banner1.jpg')">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <!-- titre -->
+        <div class="titre-header text-center">
+            <h1 class="text-white">Whatever your <span class="d-1">OCCASION,</span><br>
+                <span class="d-1 text-rouge">TASTE</span><span class="d-2"> makes</span> it one <br> to
+                <span class="d-2">remenber</span></h1>
+            <div class="pt-5">
+                <button type="button" class="mr-sm-3 my-3 btn btn-light rounded-pill py-3 px-5">PURCHASE THEME</button>
+                <button type="button" class="ml-sm-3 my-3 btn btn-danger rounded-pill py-3 px-5">LEARN MORE</button>
+            </div>
+        </div>
+        <!-- nav  -->
+        <div class="nav">
+                    <nav class="navbar navbar-expand-lg navbar-dark">
+                        <a class="navbar-brand d-lg-none" href="#"><img src="./public/img/logo.png" alt="logo"></a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                            <div class="navbar-nav">
+                                <a class="bg-hover nav-item nav-link active border-bottom border-top my-auto py-3 px-5" href="#">HOME</a>
+                                <a class="bg-hover nav-item nav-link active border-bottom border-top my-auto py-3 px-5" href="#">ABOUT&nbsp;US</a>
+                                <a class="bg-hover nav-item nav-link active border-bottom border-top my-auto py-3 px-5" href="#">MENU&nbsp;LIST</a>
+                                <a class="bg-hover nav-item nav-link active border-bottom border-top my-auto py-3 px-5" href="#">TEAM</a>
+                                <a class="nav-item nav-link active mx-5 none" href="#"><img src="./public/img/logo.png" alt=""></a>
+                                <a class="bg-hover nav-item nav-link active border-bottom border-top my-auto py-3 px-5" href="#">RESERVATION</a>
+                                <a class="bg-hover nav-item nav-link active border-bottom border-top my-auto py-3 px-5" href="#">BLOG</a>
+                                <a class="bg-hover nav-item nav-link active border-bottom border-top my-auto py-3 px-5" href="#">TESTIMONIALS</a>
+                                <a class="bg-hover nav-item nav-link active border-bottom border-top my-auto py-3 px-5" href="#">CONTACT&nbsp;US</a>
+                            </div>
+                        </div>
+                    </nav>
+        </div>
+        
+    </header>
 
 
 
@@ -31,9 +96,10 @@
 
 
     <!-- script jquery -->
-<script src="./node_modules/jquery/dist/jquery.js"></script>
+    <script src="./node_modules/jquery/dist/jquery.js"></script>
     <!-- script bootstrap -->
-<script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-<script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
+
 </html>
