--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <img class="img-fluid" src="./public/img/decoration_line.png" alt="">
             </div>
             <div class="p1-texte container text-center px-sm-5 py-sm-0 p-3">
-                <p class="mx-sm-5 mx-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam incidunt iste odio suscipit repudiandae. Ipsa nisi, officiis officia amet voluptas aut quod vel facere? Aliquam eum placeat consequuntur dolorum vel. Esse consectetur perspiciatis ut quis provident asperiores id, libero, quidem beatae molestiae laudantium illum quam. Dolorem blanditiis non inventore maiores. Possimus culpa temporibus harum beatae ipsa. Adipisci alias soluta odit beatae est voluptatem officiis obcaecati pariatur iusto autem, quas quasi quaerat error molestias, porro laboriosam? Odio at ducimus modi quam dicta sunt nostrum voluptatem, nemo fugiat soluta exercitationem aut incidunt, distinctio mollitia dolores. Quasi commodi ut molestias distinctio alias quibusdam!</p>
+                <p class="mx-sm-5 mx-3">repudiandae. Ipsa nisi, officiis officia amet voluptas aut quod vel facere? Aliquam eum placeat consequuntur dolorum vel. Esse consectetur perspiciatis ut quis provident asperiores id, libero, quidem beatae molestiae laudantium illum quam. Dolorem blanditiis non inventore maiores. Possimus culpa temporibus harum beatae ipsa. Adipisci alias soluta odit beatae est voluptatem officiis obcaecati pariatur iusto autem, quas quasi quaerat error molestias, porro laboriosam? Odio at ducimus modi quam dicta sunt nostrum voluptatem, nemo fugiat soluta exercitationem aut incidunt, distinctio mollitia dolores. Quasi commodi ut molestias distinctio alias quibusdam!</p>
             </div>
             <!-- 2eme partie  -->
             <div class="text-center m-5 p-titre">
@@ -100,14 +100,40 @@
                     <img class="img-fluid" src="./public/img/decoration_line.png" alt="">
                 </div>
             </div>
-            
-
-
-
-    
-
         </div>
     </section>
+    section 2
+    <section class="section-2 px-sm-5 pt-5">
+        <div>
+            <div class="text-center p-titre">
+                <div>
+                    <h1 class="m-0 text-white"><span class=" d-1 text-rouge">MEET</span> our&nbsp;chef</h1>
+                    <img class="img-fluid" src="./public/img/decoration_line.png" alt="">
+                </div>
+            </div>
+            <div class="d-flex flex-wrap justify-content-sm-between justify-content-center text-center text-white p-lg-5 m-sm-5">
+                <div class="d-flex flex-column p-lg-0">
+                    <img class="border-bottom" src="./public/img/chef1.png" alt="">
+                    <p class="pt-2">Cyril Lignac</p>
+                </div>
+                <div class="d-flex flex-column pt-lg-0">
+                    <img class="border-bottom" src="./public/img/chef2.png" alt="">
+                    <p class="pt-2">Thierry Marx</p>
+                </div>
+                <div class="d-flex flex-column pt-5 pt-lg-0">
+                    <img class="border-bottom" src="./public/img/chef3.png" alt="">
+                    <p class="pt-2">Philippe Etchebest</p>
+                </div>
+                <div class="d-flex flex-column pt-5 pt-lg-0">
+                    <img class="border-bottom" src="./public/img/chef4.png" alt="">
+                    <p class="pt-2">Gordon Ramsay</p>
+                </div>
+
+
+            </div>
+        </div>
+    </section>
+    section 3
 
 
 
