fin section blog

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <img class="bg-b-l" src="./public/img/box-bottom-left.png" alt="">
             </div>
             <!-- 1er partie -->
-            <div class="text-center mt-5 py-sm-5 py-3 p-titre">
+            <div class="text-center py-sm-5 py-5 p-titre">
                 <h1 class="m-0"><span class=" d-1 text-rouge">OUR</span> Story</h1>
                 <img class="img-fluid" src="./public/img/decoration_line.png" alt="">
             </div>
@@ -110,9 +110,9 @@
                     alias quibusdam!</p>
             </div>
             <!-- 2eme partie  -->
-            <div class="text-center m-5 p-titre">
-                <div>
-                    <h1 class="m-0"><span class=" d-1 text-rouge">OUR</span> Menu&nbsp;List</h1>
+            <div class="m-5 p-titre text-center">
+                <div class="">
+                    <h1 class="m-0"><span class=" d-1 text-rouge">OUR </span>Menu List</h1>
                     <img class="img-fluid" src="./public/img/decoration_line.png" alt="">
                 </div>
                 <div class="container-fluid py-sm-5 py-3">
@@ -328,18 +328,102 @@
                 <img class="bg-b-r" src="./public/img/box-bottom_right-grey.png" alt="">
                 <img class="bg-b-l" src="./public/img/box-bottom-left-grey.png" alt="">
             </div>
-            <!-- 1er partie -->
-            <div class="text-center mt-5 py-sm-5 py-3 p-titre">
-                <h1 class="m-0"><span class=" d-1 text-rouge">Book</span> Your&nbsp;table</h1>
+            <!-- 1er partie titre -->
+            <div class="text-center py-sm-5 py-5 p-titre">
+                <h1 class="m-0"><span class=" d-1 text-rouge">BOOK</span> Your&nbsp;table</h1>
                 <img class="img-fluid" src="./public/img/decoration_line.png" alt="">
             </div>
-            <div class="bg-success table">
+            <!-- 2eme partie book-->
+            <div class="table mx-auto py-5 text-center">
+                <p class="text-white">For any query please call us at: <span
+                        class="font-weight-bold h4 p-0">+91-1234567890</span></p>
+                <form class="">
+                    <div class="row">
+                        <div class="col-12 col-sm-6">
+                            <input type="text" class="form-control" placeholder="Enter Full Name">
+                        </div>
+                        <div class="col-12 col-sm-6">
+                            <input type="text" class="form-control" placeholder="Enter Id">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-sm-6">
+                            <input type="text" class="form-control" placeholder="Phone Number">
+                        </div>
+                        <div class="col-12 col-sm-6">
+                            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                                <option selected>No Of Person</option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-sm-6">
+                            <input type="text" class="form-control" placeholder="Date">
+                        </div>
+                        <div class="col-12 col-sm-6">
+                            <input type="text" class="form-control" placeholder="Time">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-sm-6">
+                            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                                <option selected>Occasion</option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                            </select>
+                        </div>
+                        <div class="col-12 col-sm-6">
+                            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                                <option selected>Cuisine</option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                            </select>
+                        </div>
+                    </div>
+                </form>
+                <button type="button" class=" mt-5 py-3 px-5 btn btn-rouge rounded-pill">BOOK NOW</button>
             </div>
+            <!-- 3eme partie titre -->
+            <div class="text-center py-sm-5 py-3 p-titre">
+                <h1 class="m-0"><span class=" d-1 text-rouge">OUR</span> Blog</h1>
+                <img class="img-fluid" src="./public/img/decoration_line.png" alt="">
+            </div>
+            <!-- 4eme partie blog -->
+            <div class="container blog bg-succes d-flex justify-content-lg-between justify-content-center flex-wrap">
+                <div>
+                    <div class="d-flex flex-column align-items-center jus p-0">
+                        <img class="" src="./public/img/blog_img2.jpg" alt="">
+                        <p class="date text-center text-white pt-3 pb-3 m-0"><span class="grand">12</span> April 2017<span class="grand">/20</span> Comment<span class="grand">/ 35</span> Likes</p>
+                    </div>
+                    <div class="moins-50">
+                        <p class="font-weight-bold text-left m-0">Lorem Ipsum</p>
+                        <p class="">Lorem, ipsum dolor sit amet consectetur adipis<br> sequi idndis voluptatem nam.</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="d-flex flex-column align-items-center jus p-0">
+                        <img class="" src="./public/img/blog_img2.jpg" alt="">
+                        <p class="date text-center text-white pt-3 pb-3 m-0"><span class="grand">12</span> April 2017<span class="grand">/20</span> Comment<span class="grand">/ 35</span> Likes</p>
+                    </div>
+                    <div class="moins-50">
+                        <p class="font-weight-bold text-left m-0">Lorem Ipsum</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipis<br> sequi idndis voluptatem nam.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center pb-5">
+                <button type="button" class="mt-sm-5 mb-3 mb-sm-0 py-3 px-5 btn btn-rouge rounded-pill">KNOW MORE</button>
+            </div>
+
+
+        </div>
         </div>
     </section>
-
-
-
 
 
 
