fin section contact

--- a/index.html
+++ b/index.html
@@ -398,7 +398,8 @@
                 <div>
                     <div class="d-flex flex-column align-items-center jus p-0">
                         <img class="" src="./public/img/blog_img2.jpg" alt="">
-                        <p class="date text-center text-white pt-3 pb-3 m-0"><span class="grand">12</span> April 2017<span class="grand">/20</span> Comment<span class="grand">/ 35</span> Likes</p>
+                        <p class="date text-center text-white pt-3 pb-3 m-0"><span class="grand">12</span> April
+                            2017<span class="grand">/20</span> Comment<span class="grand">/ 35</span> Likes</p>
                     </div>
                     <div class="moins-50">
                         <p class="font-weight-bold text-left m-0">Lorem Ipsum</p>
@@ -408,7 +409,8 @@
                 <div>
                     <div class="d-flex flex-column align-items-center jus p-0">
                         <img class="" src="./public/img/blog_img2.jpg" alt="">
-                        <p class="date text-center text-white pt-3 pb-3 m-0"><span class="grand">12</span> April 2017<span class="grand">/20</span> Comment<span class="grand">/ 35</span> Likes</p>
+                        <p class="date text-center text-white pt-3 pb-3 m-0"><span class="grand">12</span> April
+                            2017<span class="grand">/20</span> Comment<span class="grand">/ 35</span> Likes</p>
                     </div>
                     <div class="moins-50">
                         <p class="font-weight-bold text-left m-0">Lorem Ipsum</p>
@@ -417,12 +419,37 @@
                 </div>
             </div>
             <div class="text-center pb-5">
-                <button type="button" class="mt-sm-5 mb-3 mb-sm-0 py-3 px-5 btn btn-rouge rounded-pill">KNOW MORE</button>
+                <button type="button" class="mt-sm-5 mb-3 mb-sm-0 py-3 px-5 btn btn-rouge rounded-pill">KNOW
+                    MORE</button>
             </div>
-
-
         </div>
-        </div>
+
+    </section>
+    <section>
+    <br><br><br><br><br><b><b><br><br><br><br><b><br><br><br><br><br><b><br><br><br><br><br></b>
+    </b></b></b>
+    </section>
+    <section class="section-1 p-sm-5 p-0">
+        <div class="e mx-sm-5">
+            <!-- 1er partie -->
+            <div class="text-center py-sm-5 py-5 p-titre">
+                <h1 class="m-0"><span class=" d-1 text-rouge">OUR</span> Contact</h1>
+                <img class="img-fluid" src="./public/img/decoration_line.png" alt="">
+            </div>
+            <div class="bg-rouge text-white contact text-center">
+                <div class="border-bottom text-center">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <p class="pt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quod labore a eos illo numquam.</p>
+                </div>
+                <div class="border-bottom text-center">
+                    <i class="fas fa-phone-alt"></i>
+                    <p class="pt-2">+91-9876543210</p>
+                </div>
+                <div class="text-center">
+                    <i class="fas fa-envelope"></i>
+                    <p class="pt-2">abc@abc.com</p>
+                </div>
+            </div>
     </section>
 
 
