fin des sections

--- a/index.html
+++ b/index.html
@@ -425,9 +425,40 @@
         </div>
 
     </section>
-    <section>
-    <br><br><br><br><br><b><b><br><br><br><br><b><br><br><br><br><br><b><br><br><br><br><br></b>
-    </b></b></b>
+
+    <section class="section-3 px-sm-5 py-5">
+        <div>
+            <div class="text-center p-titre">
+                <div>
+                    <h1 class="m-0 text-white"><span class=" d-1 text-rouge">CLIENT</span> Testimonials</h1>
+                    <img class="img-fluid px-5 px-md-0" src="./public/img/decoration_line.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="row p-2 p-lg-5 pb-5">
+            <div class="pt-5 pt-lg-0 col-12 col-lg-6 d-flex flex-wrap text-white justify-content-md-between justify-content-center">
+                <div class="d-flex">
+                    <img class="rounded-circle border-size m-2" src="./public/img/menu_image_1.jpg" alt="">
+                </div>
+                <div class="border-client p-3">
+                    <p class="font-weight-bold h5 pb-3">Lorem Ipsum</p>
+                    <p class="text-rouge">Manager</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta cum vitae quidem omnis praesentium dolorem!</p>
+                </div>
+            </div>
+            <div class="mt-5 mt-lg-0 col-12 col-lg-6 d-flex flex-wrap text-white justify-content-md-between justify-content-center flex-md-row-reverse">
+                <div class="">
+                    <img class="rounded-circle border-size m-2" src="./public/img/menu_image_1.jpg" alt="">
+                </div>
+                <div class="border-client p-3">
+                    <p class="font-weight-bold h5 pb-3">Lorem Ipsum</p>
+                    <p class="text-rouge">Manager</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta cum vitae quidem omnis praesentium dolorem!</p>
+                </div>
+            </div>
+
+
+        </div>
     </section>
     <section class="section-1 p-sm-5 p-0">
         <div class="e mx-sm-5">
@@ -439,7 +470,8 @@
             <div class="bg-rouge text-white contact text-center">
                 <div class="border-bottom text-center">
                     <i class="fas fa-map-marker-alt"></i>
-                    <p class="pt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quod labore a eos illo numquam.</p>
+                    <p class="pt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quod labore a eos
+                        illo numquam.</p>
                 </div>
                 <div class="border-bottom text-center">
                     <i class="fas fa-phone-alt"></i>
