--- a/index.html
+++ b/index.html
@@ -425,43 +425,48 @@
         </div>
 
     </section>
-
+    <!-- section 4 -->
     <section class="section-3 px-sm-5 py-5">
         <div>
             <div class="text-center p-titre">
                 <div>
                     <h1 class="m-0 text-white"><span class=" d-1 text-rouge">CLIENT</span> Testimonials</h1>
-                    <img class="img-fluid px-5 px-md-0" src="./public/img/decoration_line.png" alt="">
+                    <img class="w-25 px-5 px-md-0" src="./public/img/decoration_line.png" alt="">
                 </div>
             </div>
         </div>
-        <div class="row p-2 p-lg-5 pb-5">
-            <div class="pt-5 pt-lg-0 col-12 col-lg-6 d-flex flex-wrap text-white justify-content-md-between justify-content-center">
-                <div class="d-flex">
-                    <img class="rounded-circle border-size m-2" src="./public/img/menu_image_1.jpg" alt="">
+        <div class="row p-2 p-lg-5 pb-5 mx-0">
+            <div
+                class="mt-5 px-0 mt-lg-0 col-12 col-lg-6 d-flex flex-wrap text-white justify-content-md-between justify-content-center px-lg-5">
+                <div class=" d-flex justify-content-center">
+                    <img class="rounded-circle border-size m-2" src="./public/img/testimonial1.jpg" alt="">
                 </div>
                 <div class="border-client p-3">
                     <p class="font-weight-bold h5 pb-3">Lorem Ipsum</p>
                     <p class="text-rouge">Manager</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta cum vitae quidem omnis praesentium dolorem!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta cum vitae quidem omnis
+                        praesentium dolorem!</p>
                 </div>
             </div>
-            <div class="mt-5 mt-lg-0 col-12 col-lg-6 d-flex flex-wrap text-white justify-content-md-between justify-content-center flex-md-row-reverse">
-                <div class="">
-                    <img class="rounded-circle border-size m-2" src="./public/img/menu_image_1.jpg" alt="">
+            <div
+                class="mt-5 px-0 mt-lg-0 col-12 col-lg-6 d-flex flex-wrap text-white justify-content-md-between px-lg-5 justify-content-center flex-md-row-reverse">
+                <div class="d-flex justify-content-center">
+                    <img class="rounded-circle border-size m-2" src="./public/img/testimonial1.jpg" alt="">
                 </div>
                 <div class="border-client p-3">
                     <p class="font-weight-bold h5 pb-3">Lorem Ipsum</p>
                     <p class="text-rouge">Manager</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta cum vitae quidem omnis praesentium dolorem!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta cum vitae quidem omnis
+                        praesentium dolorem!</p>
                 </div>
             </div>
 
 
         </div>
     </section>
-    <section class="section-1 p-sm-5 p-0">
-        <div class="e mx-sm-5">
+    <!-- section 5 -->
+    <section class="section-1 p-sm-5 pb-5">
+        <div class="mx-sm-5">
             <!-- 1er partie -->
             <div class="text-center py-sm-5 py-5 p-titre">
                 <h1 class="m-0"><span class=" d-1 text-rouge">OUR</span> Contact</h1>
@@ -483,7 +488,55 @@
                 </div>
             </div>
     </section>
+    <!-- footer  -->
+    <footer class="pt-5">
+        <!-- bord footer  -->
+        <div class="bord m-0 p-0">
+        </div>
+        <div class="container-fluid">
+            <div class="row text-white">
+                <div class="col-12 col-sm-4 px-lg-5 px-2">
+                    <h3 class="h3 pb-3">ABOUT US</h3>
+                    <p class="mb-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis doloribus nemo quas possimus a porro quo tempore aliquam impedit dolor ut ipsam quibusdam, praesentium itaque beatae dolore dicta quae maiores dignissimos eius placeat. Aperiam, obcaecati doloremque incidunt voluptas quod placeat dolores, magnam adipisci nihil vitae nulla modi autem fuga officiis!</p>
+                    <div class="d-flex logo justify-content-between">
+                        <a class="" href=""><i class="fab fa-facebook-f"></i></a>
+                        <a href=""><i class="fab fa-google-plus-g"></i></a>
+                        <a href=""><i class="fab fa-pinterest-p"></i></a>
+                        <a href=""><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-4 px-lg-5 px-2">
+                    <h3 class="h3 pb-3 pt-4 pt-sm-0">INSTAGRAM</h3>
+                    <div class="d-flex justify-content-between flex-wrap">
+                        <img src="./public/img/instragram_gallery_img1.jpg" alt="">
+                        <img src="./public/img/instragram_gallery_img2.jpg" alt="">
+                        <img src="./public/img/instragram_gallery_img1.jpg" alt="">
+                        <img src="./public/img/instragram_gallery_img2.jpg" alt="">
+                    </div>
+                    <div class="d-flex justify-content-between flex-wrap pt-lg-4 pt-0">
+                        <img src="./public/img/instragram_gallery_img1.jpg" alt="">
+                        <img src="./public/img/instragram_gallery_img2.jpg" alt="">
+                        <img src="./public/img/instragram_gallery_img1.jpg" alt="">
+                        <img src="./public/img/instragram_gallery_img2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-12 col-sm-4 px-lg-5 px-2">
+                    <h3 class="h3 pb-3 pt-4 pt-sm-0">POPULAR TAGS</h3>
+                    <span class="badge badge-pill badge-rouge border border-white py-3 px-3 mr-2 mb-2">Restaurant</span>
+                    <span class="badge badge-pill badge-rouge border border-white py-3 px-3 mr-2 mb-2">Reponsive Design</span>
+                    <span class="badge badge-pill badge-rouge border border-white py-3 px-3 mr-2 mb-2">Hotel</span>
+                    <span class="badge badge-pill badge-rouge border border-white py-3 px-3 mr-2 mb-2">Blog Section</span>
+                    <span class="badge badge-pill badge-rouge border border-white py-3 px-3 mr-2 mb-2">SEO</span>
+                    <span class="badge badge-pill badge-rouge border border-white py-3 px-3 mr-2 mb-2">Cuisine</span>
+                    <span class="badge badge-pill badge-rouge border border-white py-3 px-3 mr-2 mb-2">Graphic</span>
+                    <span class="badge badge-pill badge-rouge border border-white py-3 px-3 mr- mb-22">Food</span>
+                </div>
+            </div>
+        </div>
+        <div class="foo-rouge mt-5">
 
+        </div>
+    </footer>
 
 
 
